cluster/apps/default/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr:1.1.2 # {"$imagepolicy": "flux-system:bazarr"}
        ports:
        - containerPort: 6767
        readinessProbe:
          httpGet:
            path: /settings
            port: 6767
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /settings
            port: 6767
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /media
          name: media-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: bazarr-config
      - name: media-volume
        nfs:
          server: sc01.${SECRET_PRIVATE_DOMAIN}
          path: /mnt/dpool/media
