cluster/apps/default/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  ports:
    - port: 6767
  selector:
    app: bazarr
